<resources>
    <string name="app_name">Ejercicio20201</string>
    <string name="titulo">Programando Android</string>
    <string name="nombre">Ingresa tu nombre</string>
    <string name="edad">ingresa tu edad</string>
    <string name="telefono">Ingresa tu telefono</string>
    <string name="correo">Ingresa tu correo</string>
    <string name="btnvalor">Procesa la informacion</string>
</resources>
